WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
147283
Don't create UIWebFormAccessory if we don't require accessory view.
https://bugs.webkit.org/show_bug.cgi?id=147283
Summary
Don't create UIWebFormAccessory if we don't require accessory view.
Yongjun Zhang
Reported
2015-07-24 16:45:27 PDT
Looks like we always create UIWebFormAccessory on WKContentView even when we don't require accessory view (requiresAccessoryView is false).
Attachments
Patch.
(1.96 KB, patch)
2015-07-24 17:17 PDT
,
Yongjun Zhang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yongjun Zhang
Comment 1
2015-07-24 16:46:01 PDT
<
rdar://problem/21913247
>
Yongjun Zhang
Comment 2
2015-07-24 17:17:06 PDT
Created
attachment 257493
[details]
Patch.
WebKit Commit Bot
Comment 3
2015-07-24 18:09:42 PDT
Comment on
attachment 257493
[details]
Patch. Clearing flags on attachment: 257493 Committed
r187376
: <
http://trac.webkit.org/changeset/187376
>
WebKit Commit Bot
Comment 4
2015-07-24 18:09:47 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug