Don't create UIWebFormAccessory if we don't require accessory view. https://bugs.webkit.org/show_bug.cgi?id=147283

Don't try to intialize _formAccessoryView if requiresAccessoryView returns false since we don't
need it yet.

Patch by Yongjun Zhang <yongjun_zhang@apple.com> on 2015-07-24
Reviewed by Dan Bernstein.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView inputAccessoryView]):

Canonical link: https://commits.webkit.org/165369@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187376 268f45cc-cd09-0410-ab3c-d52691b4dbfc